force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/leaseworks__Utilization_Snapshot__c.object-meta.xml
<CustomObject>
    <description>This object is related to Asset and intended to record utilization snapshots TSN/CSN As of Date when received from operator or MRO.</description>
    <label>Utilization Snapshot</label>
    <nameField>
        <label>Utilization Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>