force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <inlineHelpText>Asset related to this utilization snapshot</inlineHelpText>
    <label>Asset</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Utilization Snapshots</relationshipLabel>
    <relationshipName>Utilization_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>