force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/fields/leaseworks__CSN_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_As_Of_Date__c</fullName>
    <inlineHelpText>Asset Cycles Since new as of Snapshot Date</inlineHelpText>
    <label>CSN as of date</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>