force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/fields/leaseworks__Documentation_URL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Documentation_URL__c</fullName>
    <inlineHelpText>URL link to the document server with related Snapshot records</inlineHelpText>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>