force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/fields/leaseworks__Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Snapshot_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>Date of Asset counters snapshot as per source documents</inlineHelpText>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>