force-app/main/default/objects/leaseworks__Utilization_Snapshot__c/validationRules/leaseworks__TypeIsNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TypeIsNotEditable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( leaseworks__Type__c )</errorConditionFormula>
    <errorMessage>The snapshot type cannot be changed after creation as it defines unique behavior.
Note: A validation snapshot causes a conflict if units misalign with utilization, while a correction snapshot adjusts TSN/CSN end values for future utilization.</errorMessage>
</ValidationRule>